<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/primaryColor"
            app:layout_scrollFlags="scroll">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="parallax">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/movie_banner_main" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="10dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/dimen_standard"
                    android:src="@drawable/items_shape"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_welcome_main"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_welcome_main"
                    style="@style/DefaultTextView"
                    android:layout_marginTop="@dimen/dimen_super_large"
                    android:layout_marginStart="@dimen/dimen_standard"
                    android:text="@string/welcome"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/DefaultTextView"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/dimen_small"
                    android:layout_marginBottom="@dimen/dimen_standard"
                    android:text="@string/app_description"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_welcome_main"
                    app:layout_constraintTop_toBottomOf="@+id/tv_welcome_main"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movies_popular"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/items_data_layout" />

    <ProgressBar
        android:id="@+id/pgb_main"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical|center"
        android:visibility="invisible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_bookmark_main"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="@dimen/dimen_large"
        android:backgroundTint="@color/primaryColor"
        android:contentDescription="@string/bookmark_button"
        android:src="@drawable/ic_bookmark_filled"
        app:borderWidth="3dp"
        app:fabCustomSize="60dp"
        app:layout_anchor="@id/main_app_bar"
        app:layout_anchorGravity="bottom|end"
        app:tint="@color/primaryTextColor" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>