<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dimen_large" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="@dimen/dimen_standard" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="10dp"
            android:layout_height="0dp"
            android:src="@drawable/items_shape"
            app:layout_constraintBottom_toBottomOf="@+id/tv_original_lang_detail"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@+id/tv_title_detail"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title_detail"
            style="@style/DefaultTextView"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/dimen_standard"
            android:layout_marginTop="@dimen/dimen_small"
            android:layout_marginEnd="@dimen/dimen_standard"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/tv_original_lang_detail"
            style="@style/DefaultTextView"
            android:layout_marginTop="@dimen/dimen_small"
            android:textColor="@color/primaryTextColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_end"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail"
            tools:text="en - 2021-02-01" />

        <TextView
            android:id="@+id/tv_vote_average_title"
            style="@style/DefaultTextView"
            android:layout_marginHorizontal="@dimen/dimen_standard"
            android:layout_marginTop="@dimen/dimen_super_large"
            android:text="@string/vote_average"
            android:textColor="@color/secondaryColor"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/tv_vote_count_title"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_original_lang_detail" />

        <TextView
            android:id="@+id/tv_rating_detail"
            style="@style/DefaultTextView"
            android:layout_marginTop="@dimen/dimen_small"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_vote_average_title"
            app:layout_constraintStart_toStartOf="@+id/tv_vote_average_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_title"
            tools:text="8.5/10" />

        <TextView
            android:id="@+id/tv_vote_count_title"
            style="@style/DefaultTextView"
            android:layout_marginHorizontal="@dimen/dimen_standard"
            android:text="@string/vote_count"
            android:textColor="@color/secondaryColor"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_vote_average_title"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@+id/tv_vote_average_title"
            app:layout_constraintTop_toTopOf="@+id/tv_vote_average_title" />

        <TextView
            android:id="@+id/tv_vote_count_detail"
            style="@style/DefaultTextView"
            android:layout_marginHorizontal="@dimen/dimen_standard"
            android:layout_marginTop="@dimen/dimen_small"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_vote_count_title"
            app:layout_constraintStart_toStartOf="@+id/tv_vote_count_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_vote_count_title"
            tools:text="563" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_standard"
            android:background="@drawable/rounded_background_secondary_color"
            android:orientation="vertical"
            android:padding="@dimen/dimen_standard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/tv_rating_detail">

            <TextView
                style="@style/DefaultTextView"
                android:text="@string/overview"
                android:textColor="@color/secondaryTextColor"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_overview"
                style="@style/DefaultTextView"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_small"
                android:textColor="@color/secondaryTextColor"
                android:textStyle="normal"
                tools:text="@tools:sample/lorem/random" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>